jellyfin-ffmpeg (5.1.2-5) unstable; urgency=medium

  * Optimize dovi buffer access, mainly on Intel
  * Add HDR metadata support for QSV/NVENC HEVC encoder
  * Add 10bit overlay support for QSV/CUDA/OpenCL
  * Add DOVI to HDR support for CUDA/OpenCL
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Mon, 07 Oct 2022 21:31:17 +0800

jellyfin-ffmpeg (5.1.2-4) unstable; urgency=medium

  * Hotfix for Mesa driver build

 -- nyanmisaka <nst799610810@gmail.com>  Sat, 29 Oct 2022 17:22:13 +0800

jellyfin-ffmpeg (5.1.2-3) unstable; urgency=medium

  * Add tier option for the QSV HEVC encoder
  * Add fixes for some quirks on DG2 on Windows
  * Improve the robustness of DV tonemap
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Tue, 26 Oct 2022 20:44:03 +0800

jellyfin-ffmpeg (5.1.2-2) unstable; urgency=medium

  * Add fixes for the invalid modifier on AMD APU
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Sun, 16 Oct 2022 22:36:31 +0800

jellyfin-ffmpeg (5.1.2-1) unstable; urgency=medium

  * New upstream version 5.1.2
  * Enable SVT-AV1 encoder for amd64
  * Remove unneeded assertion from AMF encoder
  * Disable reshape if DOVI require an EL
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Fri, 30 Sep 2022 22:35:03 +0800

jellyfin-ffmpeg (5.1.1-2) unstable; urgency=medium

  * Add fixes for VAAPI render node enumeration
  * Pin libva to release and update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Sun, 25 Sep 2022 13:41:31 +0800

jellyfin-ffmpeg (5.1.1-1) unstable; urgency=medium

  * New upstream version 5.1.1
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Fri, 2 Sep 2022 15:43:17 +0800

jellyfin-ffmpeg (5.1-2) unstable; urgency=medium

  * Revert Mesa to the last release
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Mon, 15 Aug 2022 19:29:03 +0800

jellyfin-ffmpeg (5.1-1) unstable; urgency=medium

  * New upstream version 5.1
  * Update dependencies
