@@ -1,7 +1,7 @@
 #!/bin/bash
 
 SCRIPT_REPO="https://github.com/GNOME/libxml2.git"
-SCRIPT_COMMIT="66f781cf385bf690892b48c181257841841d3d41"
+SCRIPT_COMMIT="85c6cacd67371045b1d4c9f167606f64ed0d18c7"
 
 ffbuild_enabled() {
     return 0
