@@ -1,7 +1,7 @@
 #!/bin/bash
 
 SCRIPT_REPO="https://gitlab.freedesktop.org/freetype/freetype.git"
-SCRIPT_COMMIT="109179c70ee8c9f101dd49700acbd9df124f9b1c"
+SCRIPT_COMMIT="b405fc5c1dbbe8163bf199b921ccfc5f902eaa4f"
 
 ffbuild_enabled() {
     return 0
