@@ -1,7 +1,7 @@
 #!/bin/bash
 
 SCRIPT_REPO="https://code.videolan.org/videolan/libbluray.git"
-SCRIPT_COMMIT="c923cc09c274934452f795aa06d3a5aadb31d6fb"
+SCRIPT_COMMIT="bb5bc108ec695889855f06df338958004ff289ef"
 
 ffbuild_enabled() {
     return 0
