@@ -1,7 +1,7 @@
 #!/bin/bash
 
 SCRIPT_REPO="https://chromium.googlesource.com/webm/libwebp"
-SCRIPT_COMMIT="3f73e8f7ac83e97a26346886b529b61809a839f5"
+SCRIPT_COMMIT="e5fe2cfc1bea149106d94ef5233c488ed1287b68"
 
 ffbuild_enabled() {
     return 0
