@@ -1,7 +1,7 @@
 #!/bin/bash
 
 SCRIPT_REPO="https://github.com/KhronosGroup/Vulkan-Headers.git"
-SCRIPT_COMMIT="v1.3.234"
+SCRIPT_COMMIT="v1.3.237"
 SCRIPT_TAGFILTER="v?.*.*"
 
 ffbuild_enabled() {
